--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>Freelance Coding</title>
     <meta name="description" content="Hier findest du das komplette Sven Höhn Portfolio">
     <meta name="keywords" content="Sven Höhn Portfolio">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <nav id="main-nav">
             <div class="standard-container">
-                <img src="/img/PiepsmitTasse.png" alt="" id="logo">
+                <img src="PiepsmitTasse.png" alt="" id="logo">
                 <ul>
                     <li><a href="index.html">Startseite</a></li>
                     <li><a href="https://github.com/xXMaddyX">GitHub</a></li>
@@ -27,7 +27,7 @@
     </div>
     
     <div class="main-text">
-        <img id="pieps" src="img/PiepsmitTasse.png" alt="">
+        <img id="pieps" src="PiepsmitTasse.png" alt="">
         <p id="text1">Wir sind Freelance Coding.<br><br>
             Mit Leidenschaft und Fachkenntnis bieten wir maßgeschneiderte Lösungen in den Sprachen Python, Rust, HTML, CSS und Javascript.<br>
             Als erfahrene Entwickler haben wir eine Leidenschaft für Code und die Kunst des Programmierens.<br><br>
@@ -43,17 +43,17 @@
 
     <div class="lang">
         <ul>
-            <a href="https://www.python.org/" target="_blank"><img id="py" src="img/python-logo-only.png" alt=""></a>
-            <a href="https://www.rust-lang.org/" target="_blank"><img id="rust" src="img/Rust_programming_language_black_logo.svg.png" alt=""></a>
-            <a href="https://www.w3schools.com/html/" target="_blank"><img id="html" src="img/HTML5_logo_and_wordmark.svg.png" alt=""></a>
-            <a href="https://www.w3schools.com/css/" target="_blank"><img id="css" src="img/CSS3_logo_and_wordmark.svg.png" alt=""></a>
-            <a href="https://www.w3schools.com/js/" target="_blank"><img id="js" src="img/Unofficial_JavaScript_logo_2.svg.png" alt=""></a>
+            <a href="https://www.python.org/" target="_blank"><img id="py" src="python-logo-only.png" alt=""></a>
+            <a href="https://www.rust-lang.org/" target="_blank"><img id="rust" src="Rust_programming_language_black_logo.svg.png" alt=""></a>
+            <a href="https://www.w3schools.com/html/" target="_blank"><img id="html" src="HTML5_logo_and_wordmark.svg.png" alt=""></a>
+            <a href="https://www.w3schools.com/css/" target="_blank"><img id="css" src="CSS3_logo_and_wordmark.svg.png" alt=""></a>
+            <a href="https://www.w3schools.com/js/" target="_blank"><img id="js" src="Unofficial_JavaScript_logo_2.svg.png" alt=""></a>
         </ul>
     </div>
 
 
     <div class="code-img">
-        <img src="img/Code.png" alt="">
+        <img src="Code.png" alt="">
     </div>
 
     <footer>
