--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Freelance Coding</title>
     <meta name="description" content="Hier findest du das komplette Sven Höhn Portfolio">
     <meta name="keywords" content="Sven Höhn Portfolio">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://xxmaddyx.github.io/style.css">
 </head>
 <body>
     <header>
