--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Hier findest du das komplette Sven Höhn Portfolio">
     <meta name="keywords" content="Archery Quiz, Freelance Archery">
     <title>Archery Quiz</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://xxmaddyx.github.io/style.css">
 </head>
 <body>
     <main class="main">
