--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     </div>
 
 
-    <script src="script/question.js"></script>
-    <script src="script/script.js"></script>
+    <script src="question.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
