--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <div class="result-box">
                     <h2>Dein Ergebniss!</h2>
                     <div class="percentage-container">
-                        <img class="pieps" src="img/PiepsmitTasse.png" alt="">
+                        <img class="pieps" src="PiepsmitTasse.png" alt="">
 
                         <span class="score-text">Deine Punkte 0 von 5</span>
                     </div>
