--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Hier findest du das komplette Sven Höhn Portfolio">
     <meta name="keywords" content="Archery Quiz, Freelance Archery">
     <title>Archery Quiz</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <main class="main">
@@ -51,7 +51,7 @@
                 <div class="result-box">
                     <h2>Dein Ergebniss!</h2>
                     <div class="percentage-container">
-                        <img class="pieps" src="PiepsmitTasse.png" alt="">
+                        <img class="pieps" src="img/PiepsmitTasse.png" alt="">
 
                         <span class="score-text">Deine Punkte 0 von 5</span>
                     </div>
@@ -61,6 +61,17 @@
                         <button class="win-btn">Gutschein</button>
                     </div>
                 </div>
+
+                <div class="code-popup">
+                    <h2>Hier ist dein Gutschein Code</h2>
+                    <div class="img-container2">
+                        <img class="pieps2" src="img/PiepsmitTasse.png" alt="">
+                        <span class="score-text">Dein Code lautet: Quiz2 </span>
+                        <span class="code"></span>
+                    </div>
+
+                </div>
+
             </section>
 
             <section class="home">
@@ -76,11 +87,13 @@
     </main>
     <div class="popup-info">
         <h2>Quiz Guide</h2>
-        <span class="info">1. beschreibung dagfadfgadfgadfgadfgadfgagdf</span>
-        <span class="info">2. beschreibung adfgadfgdafggadfgfddgaf</span>
-        <span class="info">3. beschreibung agadfgadfgdfgaadgdafg</span>
-        <span class="info">4. beschreibung adfgadfgadfgadfgdafgadfg</span>
-        <span class="info">5. beschreibung adfgadfgadfgagdfagdf</span>
+        <span class="info">1. Willkommen bei unserem Quiz, Viel Spaß....</span>
+        <span class="info">2. Bei voller Punktzahl erhaltet Ihr einen Gutschein.</span>
+        <span class="info">3. Zum erhalten des Gutscheins auf Gutschein Klicken.</span>
+        <span class="info">4. Jeder Gutschein ist nur einmal Einlösbar je Account.</span>
+        <span class="info">5. Gutscheine habe kein Ablaufdatum.</span>
+        <span class="info">6. Bei Problemen bitte eine Kurze Mail an uns.</span>
+        <span class="info">7. Das Quiz ist nicht für Mobile Optimiert.</span>
 
         <div class="btn-group">
             <button class="info-btn exit-btn">Quiz beenden</button>
@@ -89,7 +102,7 @@
     </div>
 
 
-    <script src="question.js"></script>
-    <script src="script.js"></script>
+    <script src="script/question.js"></script>
+    <script src="script/script.js"></script>
 </body>
 </html>
