--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Hier findest du das komplette Sven Höhn Portfolio">
     <meta name="keywords" content="Archery Quiz, Freelance Archery">
     <title>Archery Quiz</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <main class="main">
@@ -51,7 +51,7 @@
                 <div class="result-box">
                     <h2>Dein Ergebniss!</h2>
                     <div class="percentage-container">
-                        <img class="pieps" src="img/PiepsmitTasse.png" alt="">
+                        <img class="pieps" src="PiepsmitTasse.png" alt="">
 
                         <span class="score-text">Deine Punkte 0 von 5</span>
                     </div>
@@ -65,7 +65,7 @@
                 <div class="code-popup">
                     <h2>Hier ist dein Gutschein Code</h2>
                     <div class="img-container2">
-                        <img class="pieps2" src="img/PiepsmitTasse.png" alt="">
+                        <img class="pieps2" src="PiepsmitTasse.png" alt="">
                         <span class="score-text">Dein Code lautet: Quiz2 </span>
                         <span class="code"></span>
                     </div>
@@ -102,7 +102,7 @@
     </div>
 
 
-    <script src="script/question.js"></script>
-    <script src="script/script.js"></script>
+    <script src="question.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
