--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <a href="#" class="logo">Piep´s Archery Quiz</a>
             <nav class="navbar">
                 <a href="#" class="active">Start</a>
+                <a href="blog.html">Blog Seite</a>
                 <a href="https://www.freelance-archery.de/">Freelance</a>
             </nav>
 
