--- a/blog.html
+++ b/blog.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Piep´s Archery Blog</title>
-    <link rel="stylesheet" href="css/blog_style.css">
+    <link rel="stylesheet" href="blog_style.css">
 </head>
 <body>
     <div class="content">
         <div class="menue-left">
-            <div class="button"><button onclick='navigateTo("index.html")'>Home</button></div>
-            <div class="button"><button>Bilder</button></div>
+            <div class="button"><button onclick='navigateTo("blog.html")'>Home</button></div>
+            <div class="button"><button onclick='navigateTo("index.html")'>Quiz</button></div>
             <div class="button"><button onclick='navigateToBlank("https://www.youtube.com/@freelancearchery")'>Youtube</button></div>
             <div class="button"><button onclick="navigateTo('tools.html')">Tools</button></div>
             <div class="button"><button onclick="navigateToBlank('https://www.freelance-archery.de/')">Freelance</button></div>
@@ -18,14 +18,14 @@
 
         <div class="center">
             <div class="fild-news">
-                <img src="img/PiepsmitTasse.png" alt="">
+                <img src="PiepsmitTasse.png" alt="">
                 <h2>Willkommen auf Unserer neuen Seite für alles Rund um den Bogensport</h2>
                 <p>Hier werdet Ihr in zukunft viele Spannende News rund um den Bogensport finden.<br>
                     Auch von uns entwickelte Softwaretools werden hier verfügbar seien... <br>
                     Seit gespannt :D</p>
             </div>
             <div class="fild-news">
-                <img src="img/PiepsmitTasse.png" alt="">
+                <img src="PiepsmitTasse.png" alt="">
                 <h2>Der Bogen: Seine Geschichte, Materialien und Einfluss auf die Welt</h2><br>
                     <p>Seit Anbeginn der Zivilisation hat der Bogen einen zentralen Platz in der Entwicklung der Menschheit eingenommen. <br>
                     Von seinen Anfängen als grundlegendes Jagdwerkzeug bis hin zu seiner Verwendung als Waffe in der Kriegsführung hat der Bogen Generationen überdauert und sich stetig weiterentwickelt. <br>
@@ -85,12 +85,12 @@
                     
                     </p>
             </div>
-            <div class="fild-news"><img src="img/PiepsmitTasse.png" alt=""></div>
-            <div class="fild-news"><img src="img/PiepsmitTasse.png" alt=""></div>
-            <div class="fild-news"><img src="img/PiepsmitTasse.png" alt=""></div>
-            <div class="fild-news"><img src="img/PiepsmitTasse.png" alt=""></div>
-            <div class="fild-news"><img src="img/PiepsmitTasse.png" alt=""></div>
-            <div class="fild-news"><img src="img/PiepsmitTasse.png" alt=""></div>
+            <div class="fild-news"><img src="PiepsmitTasse.png" alt=""></div>
+            <div class="fild-news"><img src="PiepsmitTasse.png" alt=""></div>
+            <div class="fild-news"><img src="PiepsmitTasse.png" alt=""></div>
+            <div class="fild-news"><img src="PiepsmitTasse.png" alt=""></div>
+            <div class="fild-news"><img src="PiepsmitTasse.png" alt=""></div>
+            <div class="fild-news"><img src="PiepsmitTasse.png" alt=""></div>
             
         </div>
 
@@ -101,6 +101,6 @@
             </div>
         </div>
     </div>
-    <script src="script/index_script.js"></script>
+    <script src="index_script.js"></script>
 </body>
 </html>
