--- a/tools.html
+++ b/tools.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Piep`s Tool Box</title>
-    <link rel="stylesheet" href="css/tools_style.css">
+    <link rel="stylesheet" href="tools_style.css">
 </head>
 <body>
     <div class="content">
         <div class="menue-left">
             <div class="button"><button onclick="navigateTo('blog.html')">Home</button></div>
-            <div class="button"><button>Bilder</button></div>
+            <div class="button"><button onclick='navigateTo("index.html")'>Quiz</button></div>
             <div class="button"><button onclick="navigateTo('https://www.youtube.com/@freelancearchery', 'blank')">Youtube</button></div>
             <div class="button"><button onclick="navigateTo('tools.html')">Tools</button></div>
             <div class="button"><button onclick="navigateTo('https://www.freelance-archery.de/')">Freelance</button></div>
@@ -25,6 +25,6 @@
 
         <div class="menue-right">3</div>
     </div>
-    <script src="script/index_script.js"></script>
+    <script src="index_script.js"></script>
 </body>
 </html>
