--- a/tools.html
+++ b/tools.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Piep`s Tool Box</title>
-    <link rel="stylesheet" href="css/tools_style.css">
+    <link rel="stylesheet" href="tools_style.css">
 </head>
 <body>
     <div class="content">
