--- a/index.html
+++ b/index.html
@@ -32,40 +32,58 @@
         <h1>My Techstack Overview</h1>
         <div class="tech-heading">
             <div class="tech-heading-item">
-                <h2>HTML</h3>
-                <img class="img" src="./img/HTML5_logo_and_wordmark.svg.png" alt="blub">
+                <a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank">
+                    <h2>HTML</h3>
+                    <img class="img" src="./img/HTML5_logo_and_wordmark.svg.png" alt="blub">
+                </a>
             </div>
             <div class="tech-heading-item">
-                <h2>CSS</h3>
-                <img class="img" src="./img/CSS.3.svg.png" alt="blub">
+                <a href="https://developer.mozilla.org/en-US/docs/Web/CSS" target="_blank">
+                    <h2>CSS</h3>
+                    <img class="img" src="./img/CSS.3.svg.png" alt="blub">
+                </a>
             </div>
             <div class="tech-heading-item">
-                <h2>Javascript</h3>
-                <img class="img" src="./img/Javascript_badge.svg.png" alt="blub">
+                <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank">
+                    <h2>Javascript</h3>
+                    <img class="img" src="./img/Javascript_badge.svg.png" alt="blub">
+                </a>
             </div>
             <div class="tech-heading-item">
-                <h2>Go</h3>
-                <img class="img" src="./img/512px-Go_Logo_Blue.svg.png" alt="blub">
+                <a href="https://go.dev/" target="_blank">
+                    <h2>Go</h3>
+                    <img class="img" src="./img/512px-Go_Logo_Blue.svg.png" alt="blub">
+                </a>
             </div>
             <div class="tech-heading-item">
-                <h2>Vue.js</h3>
-                <img class="img" src="./img/Vue.js_Logo_2.svg.png" alt="blub">
+                <a href="https://vuejs.org/" target="_blank">
+                    <h2>Vue.js</h3>
+                    <img class="img" src="./img/Vue.js_Logo_2.svg.png" alt="blub">
+                </a>
             </div>
             <div class="tech-heading-item">
-                <h2>MongoDB</h3>
-                <img class="img" src="./img/MongoDB_Logo.svg.png" alt="blub">
+                <a href="https://www.mongodb.com/" target="_blank">
+                    <h2>MongoDB</h3>
+                    <img class="img" src="./img/MongoDB_Logo.svg.png" alt="blub">
+                </a>
             </div>
             <div class="tech-heading-item">
-                <h2>Python</h2>
-                <img class="img" src="./img/Python-logo-notext.svg.png" alt="blub">
+                <a href="https://www.python.org/" target="_blank">
+                    <h2>Python</h2>
+                    <img class="img" src="./img/Python-logo-notext.svg.png" alt="blub">
+                </a>
             </div>
             <div class="tech-heading-item">
-                <h2>Sass</h2>
-                <img class="img" src="./img/512px-Sass_Logo_Color.svg.png" alt="blub">
+                <a href="https://sass-lang.com/" target="_blank">
+                    <h2>Sass</h2>
+                    <img class="img" src="./img/512px-Sass_Logo_Color.svg.png" alt="blub">
+                </a>
             </div>
             <div class="tech-heading-item">
-                <h2>Node.js</h2>
-                <img class="img" src="./img/590px-Node.js_logo.svg.png" alt="blub">
+                <a href="https://nodejs.org/" target="_blank">
+                    <h2>Node.js</h2>
+                    <img class="img" src="./img/590px-Node.js_logo.svg.png" alt="blub">
+                </a>
             </div>
         </div>
     </main>
@@ -90,5 +108,7 @@
 
     </footer>
     <script src="./script/index.js"></script>
+</body>
+</html>
 </body>
 </html>
