--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <nav class="nav">
             <ul class="nav__list">
                 <li class="nav__list-item"><a id="list1" href="./projects.html"></a></li>
-                <li class="nav__list-item"><a id="list2" href="/about"></a></li>
-                <li class="nav__list-item"><a id="list3" href="/contact"></a></li>
+                <li class="nav__list-item"><a id="list2" href="./info.html"></a></li>
+                <li class="nav__list-item"><a id="list3" href="./contact.html"></a></li>
             </ul>
         </nav>
         <img class="nav-img" src="./img/PiepsmitTasseico.ico" alt="">
