--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="line"></div>
     <main class="main-greeting">
         <div class="greeting">
-            <h1>I`am Sven Höhn</h1>
+            <h1>&lt; I`am Sven Höhn &gt;</h1>
             <h3>"Your Fullstack Web Designer for Modern</h3>
             <h3>and</h3>
             <h3>Dynamic Web Solutions."</h3>
@@ -29,7 +29,7 @@
     </main>
     <div class="line"></div>
     <main class="main-content">
-        <h1>My Techstack Overview</h1>
+        <h1>&lt; My Techstack Overview &gt</h1>
         <div class="tech-heading">
             <div class="tech-heading-item">
                 <a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank">
@@ -90,7 +90,7 @@
     <div class="line"></div>
     <main class="philosophie">
         <div class="philosophie-text">
-            <h1>"Harmonious Synergy: Aesthetics Meets Functionality"</h1>
+            <h1>&lt; Harmonious Synergy: Aesthetics Meets Functionality &gt;</h1>
             <h2>...</h2>
             <h3>"In my work as a Fullstack Web Designer, I strive for a harmonious interplay between design and technology. I firmly believe that effective web design goes beyond mere aesthetics – it is a fusion of creative design and robust, scalable technology.</h3>
             <h2>...</h2>
@@ -100,7 +100,7 @@
             <h2>...</h2>
             <h3>My goal is to push the boundaries of what is possible by combining modern technologies and proven methods to create web solutions that impress not only today but will also stand the test of time. I view each project as a unique puzzle that requires a tailored solution – one that addresses both the client's vision and the end users' needs."</h3>
             <h2>...</h2>
-            <h2>"Let's create a unique web experience!!!"</h3>
+            <h2>&lt; Let's create a unique web experience!!! &gt;</h3>
             <img class="end-img" src="./img/PiepsmitTasseico.ico" alt="">
         </div>
     </main>
