--- a/contact.html
+++ b/contact.html
@@ -22,6 +22,7 @@
     <main>
 
     </main>
+    <div class="line"></div>
     <footer class="footer">
         <div class="footer-links">
             <ul class="footer-link-list">
