--- a/index.html
+++ b/index.html
@@ -104,11 +104,18 @@
             <img class="end-img" src="./img/PiepsmitTasseico.ico" alt="">
         </div>
     </main>
-    <footer>
-
+    <div class="line"></div>
+    <footer class="footer">
+        <div class="footer-links">
+            <ul class="footer-link-list">
+                <li class="footer-list-item"><a href="./impressum.html">Impressum</a></li>
+                <li class="footer-list-item"><a href="mailto:maddyaion@hotmail.de">Mail</a></li>
+            </ul>
+        </div>
+        <div class="footer-copyright">
+            <p>&#169 Copyright 2023 by Freelance Coding Sven Höhn</p>
+        </div>
     </footer>
     <script src="./script/index.js"></script>
-</body>
-</html>
 </body>
 </html>
