--- a/projects.html
+++ b/projects.html
@@ -18,11 +18,20 @@
         </nav>
         <img class="nav-img" src="./img/PiepsmitTasseico.ico" alt="">
     </header>
+    <div class="line"></div>
     <main>
 
     </main>
-    <footer>
-
+    <footer class="footer">
+        <div class="footer-links">
+            <ul class="footer-link-list">
+                <li class="footer-list-item"><a href="./impressum.html">Impressum</a></li>
+                <li class="footer-list-item"><a href="mailto:maddyaion@hotmail.de">Mail</a></li>
+            </ul>
+        </div>
+        <div class="footer-copyright">
+            <p>&#169 Copyright 2023 by Freelance Coding Sven Höhn</p>
+        </div>
     </footer>
 
     <script src="./script/index.js"></script>
