--- a/projects.html
+++ b/projects.html
@@ -19,8 +19,8 @@
         <img class="nav-img" src="./img/PiepsmitTasseico.ico" alt="">
     </header>
     <div class="line"></div>
-    <main>
-
+    <main class="main">
+        
     </main>
     <footer class="footer">
         <div class="footer-links">
