--- a/index.html
+++ b/index.html
@@ -116,6 +116,6 @@
             <p>&#169 Copyright 2023 by Freelance Coding Sven Höhn</p>
         </div>
     </footer>
-    <script src="./script/index.js"></script>
+    <script src="./script/index.js" type="module"></script>
 </body>
 </html>
