--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,7 @@
     </header>
     <div class="line"></div>
     <main class="main">
-        
+
     </main>
     <footer class="footer">
         <div class="footer-links">
@@ -34,7 +34,6 @@
         </div>
     </footer>
 
-    <script src="./script/index.js"></script>
-    <script src="./script/projects.js"></script>
+    <script src="./script/index.js" type="module"></script>
 </body>
 </html>
