--- a/projects.html
+++ b/projects.html
@@ -22,6 +22,7 @@
     <main class="main">
 
     </main>
+    <div class="line"></div>
     <footer class="footer">
         <div class="footer-links">
             <ul class="footer-link-list">
@@ -33,7 +34,7 @@
             <p>&#169 Copyright 2023 by Freelance Coding Sven Höhn</p>
         </div>
     </footer>
-
     <script src="./script/index.js" type="module"></script>
+    <script src="./script/projects.js" type="module"></script>
 </body>
 </html>
