--- a/info.html
+++ b/info.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projekte</title>
-    <link rel="stylesheet" href="./styles/projects.css">
+    <link rel="stylesheet" href="./styles/info.css">
 </head>
 <body>
     <header class="header">
@@ -19,8 +19,17 @@
         <img class="nav-img" src="./img/PiepsmitTasseico.ico" alt="">
     </header>
     <div class="line"></div>
-    <main>
-
+    <main class="main">
+        <div class="personal-info">
+            <div class="info">
+                <!--<h1 class="info-heading"><h1>-->
+                <!--<h3 class="info-text"><h3>-->
+            </div>
+            <div class="picture">
+                <!--<img .class="info-foto"><img>-->
+            </div>
+        </div>
+        <div class="texting"></div>
     </main>
     <div class="line"></div>
     <footer class="footer">
@@ -35,6 +44,7 @@
         </div>
     </footer>
 
-    <script src="./script/index.js"></script>
+    <script src="./script/index.js" type="module"></script>
+    <script src="./script/info.js" type="module"></script>
 </body>
 </html>
