--- a/info.html
+++ b/info.html
@@ -29,7 +29,16 @@
                 <!--<img .class="info-foto"><img>-->
             </div>
         </div>
-        <div class="texting"></div>
+        <div class="cube-box">
+            <div class="boxes cube1">
+                <div class="face front"></div>
+                <div class="face back"></div>
+                <div class="face right"></div>
+                <div class="face left"></div>
+                <div class="face top"></div>
+                <div class="face bottom"></div>
+            </div>
+        </div>
     </main>
     <div class="line"></div>
     <footer class="footer">
