--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projekte</title>
-    <link rel="stylesheet" href="./styles/projects.css">
+    <title>Kontakt</title>
+    <link rel="stylesheet" href="./styles/contact.css">
 </head>
 <body>
     <header class="header">
@@ -19,8 +19,27 @@
         <img class="nav-img" src="./img/PiepsmitTasseico.ico" alt="">
     </header>
     <div class="line"></div>
-    <main>
-
+    <main class="main">
+        <div class="content">
+            <h1>KontaktDaten</h1>
+            <h3>Tel.: +49 151 40741961</h3>
+            <h3>Adresse: Else-Brändström-Straße 59, 55124 Mainz</h3>
+            <h3>E-Mail: <a href="mailto:maddyaion@hotmail.de">maddyaion@hotmail.de</a></h3>
+            <h3>Github: <a href="https://github.com/xXMaddyX" target="_blank">github.com/xXMaddyX</a></h3>
+            <h3>Instagram: <a href="https://www.instagram.com/freelancearchery/">FreelanceArchery@Instagram</a></h3>
+            <h3>Archry Shop: <a href="https://www.freelance-archery.de/">FreelanceArchery Shop</a></h3>
+            <h3>Facebook: <a href="https://www.facebook.com/FreelanceArchery/">FreelanceArchery@Facebook</a></h3>
+        </div>
+        <div class="cube-box">
+            <div class="boxes cube1">
+                <div class="face front"></div>
+                <div class="face back"></div>
+                <div class="face right"></div>
+                <div class="face left"></div>
+                <div class="face top"></div>
+                <div class="face bottom"></div>
+            </div>
+        </div>
     </main>
     <div class="line"></div>
     <footer class="footer">
@@ -35,6 +54,7 @@
         </div>
     </footer>
 
-    <script src="./script/index.js"></script>
+    <script src="./script/index.js" type="module"></script>
+    <script src="./script/contact.js" type="module"></script>
 </body>
 </html>
