--- a/info.html
+++ b/info.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projekte</title>
+    <title>Info</title>
     <link rel="stylesheet" href="./styles/info.css">
 </head>
 <body>
