--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
     <div class="line"></div>
     <main class="main-greeting">
         <div class="greeting">
-            <h1>&lt; I`am Sven Höhn &gt;</h1>
-            <h3>"Your Fullstack Web Designer for Modern</h3>
-            <h3>and</h3>
-            <h3>Dynamic Web Solutions."</h3>
+            <h1>&lt; Ich bin Sven Höhn &gt;</h1>
+            <h3>"Ihr Fullstack Webentwickler für Moderne</h3>
+            <h3>und</h3>
+            <h3>Dynamische Web-Lösungen."</h3>
         </div>
     </main>
     <div class="line"></div>
     <main class="main-content">
-        <h1>&lt; My Techstack Overview &gt</h1>
+        <h1>&lt; Mein Techstack im Überblick &gt</h1>
         <div class="tech-heading">
             <div class="tech-heading-item">
                 <a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank">
@@ -90,17 +90,17 @@
     <div class="line"></div>
     <main class="philosophie">
         <div class="philosophie-text">
-            <h1>&lt; Harmonious Synergy: Aesthetics Meets Functionality &gt;</h1>
+            <h1>&lt; Harmonische Synergie: Ästhetik trifft Funktionalität &gt;</h1>
             <h2>...</h2>
-            <h3>"In my work as a Fullstack Web Designer, I strive for a harmonious interplay between design and technology. I firmly believe that effective web design goes beyond mere aesthetics – it is a fusion of creative design and robust, scalable technology.</h3>
+            <h3>In meiner Arbeit als Fullstack Webdesigner strebe ich nach einem harmonischen Zusammenspiel von Design und Technologie. Ich bin fest davon überzeugt, dass effektives Webdesign über reine Ästhetik hinausgeht – es ist eine Fusion aus kreativem Design und robuster, skalierbarer Technologie.</h3>
             <h2>...</h2>
-            <h3>My focus is on creating aesthetically pleasing and user-friendly interfaces using HTML, CSS, and JavaScript, which not only delight the eye but are also intuitive and accessible. With Vue, I bring dynamics and reactivity to websites, ensuring seamless interaction.</h3>
+            <h3>Mein Fokus liegt darauf, ästhetisch ansprechende und benutzerfreundliche Schnittstellen mit HTML, CSS und JavaScript zu erstellen, die nicht nur das Auge erfreuen, sondern auch intuitiv und zugänglich sind. Mit Vue bringe ich Dynamik und Reaktivität in Webseiten, um eine nahtlose Interaktion zu gewährleisten.</h3>
             <h2>...</h2>
-            <h3>On the server side, I use MongoDB for flexible and powerful data management, combined with the efficiency and effectiveness of Golang to develop back-end systems that are fast, reliable, and scalable.</h3>
+            <h3>Auf der Serverseite verwende ich MongoDB für ein flexibles und leistungsstarkes Datenmanagement, kombiniert mit der Effizienz und Effektivität von "Go", um Back-End-Systeme zu entwickeln, die schnell, zuverlässig und skalierbar sind.</h3>
             <h2>...</h2>
-            <h3>My goal is to push the boundaries of what is possible by combining modern technologies and proven methods to create web solutions that impress not only today but will also stand the test of time. I view each project as a unique puzzle that requires a tailored solution – one that addresses both the client's vision and the end users' needs."</h3>
+            <h3>Mein Ziel ist es, die Grenzen des Möglichen zu erweitern, indem ich moderne Technologien und bewährte Methoden kombiniere, um Web-Lösungen zu schaffen, die nicht nur heute beeindrucken, sondern auch den Test der Zeit bestehen werden. Ich betrachte jedes Projekt als einzigartiges Puzzle, das eine maßgeschneiderte Lösung erfordert – eine, die sowohl die Vision des Kunden als auch die Bedürfnisse der Endnutzer berücksichtigt.</h3>
             <h2>...</h2>
-            <h2>&lt; Let's create a unique web experience!!! &gt;</h3>
+            <h2>&lt; Lassen Sie uns ein einzigartiges Web-Erlebnis schaffen!!! &gt;</h3>
             <img class="end-img" src="./img/PiepsmitTasseico.ico" alt="">
         </div>
     </main>
