--- a/index.html
+++ b/index.html
@@ -85,6 +85,24 @@
                     <img class="img" src="./img/590px-Node.js_logo.svg.png" alt="blub">
                 </a>
             </div>
+            <div class="tech-heading-item">
+                <a href="https://www.babylonjs.com/" target="_blank">
+                    <h2>Babylon.js</h2>
+                    <img class="img" src="./img/1024px-Babylon_logo_v4.svg.png" alt="blub">
+                </a>
+            </div>
+            <div class="tech-heading-item">
+                <a href="https://inkscape.org/" target="_blank">
+                    <h2>Inkscape</h2>
+                    <img class="img" src="./img/Flat_logo,_wordmark_and_slogan_mark_of_Inkscape.svg.png" alt="blub">
+                </a>
+            </div>
+            <div class="tech-heading-item">
+                <a href="https://www.blender.org/" target="_blank">
+                    <h2>Blender</h2>
+                    <img class="img" src="./img/Blender_logo_no_text.svg.png" alt="blub">
+                </a>
+            </div>
         </div>
     </main>
     <div class="line"></div>
