--- a/demoprojects/TheSun/sonne.html
+++ b/demoprojects/TheSun/sonne.html
@@ -35,6 +35,10 @@
                     <div class="circle2">
                         <div class="layer3">
                             <div class="circle3">
+                                <div class="layer4">
+                                    <div class="circle4">
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
