--- a/demoprojects/TheSun/sonne.html
+++ b/demoprojects/TheSun/sonne.html
@@ -29,22 +29,20 @@
     </header>
     <div class="line"></div>
     <main class="main">
+        <div class="placeholder"></div>
         <div class="layer1">
             <div class="circle1">
                 <div class="layer2">
                     <div class="circle2">
                         <div class="layer3">
                             <div class="circle3">
-                                <div class="layer4">
-                                    <div class="circle4">
-                                    </div>
-                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+        <div class="placeholder"></div>
         </main>
         <div class="line"></div>
         <footer class="footer">
