--- a/demoprojects/TheSun/sonne.html
+++ b/demoprojects/TheSun/sonne.html
@@ -19,7 +19,7 @@
                 <div class="burger-line burger-line2"></div>
                 <div class="burger-line burger-line3"></div>
                 <ul class="navlist-burger">
-                    <li class="navlist-item welcome">Home</li>
+                    <li class="navlist-item opening">Einleitung</li>
                     <li class="navlist-item alt-testament">Content</li>
                     <li class="navlist-item">About</li>
                 </ul>
@@ -27,6 +27,7 @@
         </nav>
     </header>
     <div class="line"></div>
+    <div class="vertical-line"></div>
     <main class="main">
         <div class="placeholder"></div>
         <div class="layer1">
@@ -42,8 +43,24 @@
             </div>
         </div>
         <div class="placeholder"></div>
-        </main>
-        <div class="line"></div>
+    </main>
+    <div class="vertical-line"></div>
+    <div class="basic-infos"></div>
+    <div class="line"></div>
+    <main class="opening">
+        <div class="opening-container">
+            <div class="heading">
+                <h1>Einleitung</h1>
+            </div>
+            <div class="text-content">
+                <!--<div class="text-content-item">
+                    <h2>Text</h2>
+                    <p>Text</p>
+                    <p>...</p>
+                </div>-->
+            </div>
+        </div>
+    </main>
         <footer class="footer">
     
         </footer>
