--- a/demoprojects/TheSun/sonne.html
+++ b/demoprojects/TheSun/sonne.html
@@ -19,7 +19,7 @@
                 <div class="burger-line burger-line2"></div>
                 <div class="burger-line burger-line3"></div>
                 <ul class="navlist-burger">
-                    <li class="navlist-item opening">Einleitung</li>
+                    <li class="navlist-item" id="opening">Einleitung</li>
                     <li class="navlist-item alt-testament">Content</li>
                     <li class="navlist-item">About</li>
                 </ul>
