--- a/impressum.html
+++ b/impressum.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="de">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Impressum</title>
-    <link rel="stylesheet" href="./styles/projects.css">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Impressum</title>
+        <link rel="stylesheet" href="./styles/projects.css">
+        <script src="./script/index.js" defer></script>
 </head>
 <body>
     <header class="header">
@@ -33,7 +34,5 @@
             <p>&#169 Copyright 2023 by Freelance Coding Sven Höhn</p>
         </div>
     </footer>
-
-    <script src="./script/index.js"></script>
 </body>
 </html>
