--- a/info.html
+++ b/info.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="de">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Info</title>
-    <link rel="stylesheet" href="./styles/info.css">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Info</title>
+        <link rel="stylesheet" href="./styles/info.css">
+        <script src="./script/index.js" type="module" defer></script>
+        <script src="./script/info.js" type="module" defer></script>
 </head>
 <body>
     <header class="header">
@@ -53,7 +55,5 @@
         </div>
     </footer>
 
-    <script src="./script/index.js" type="module"></script>
-    <script src="./script/info.js" type="module"></script>
 </body>
 </html>
