--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="de">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kontakt</title>
-    <link rel="stylesheet" href="./styles/contact.css">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Kontakt</title>
+        <link rel="stylesheet" href="./styles/contact.css">
+        <script src="./script/index.js" type="module" defer></script>
+        <script src="./script/contact.js" type="module" defer></script>
 </head>
 <body>
     <header class="header">
@@ -54,7 +56,5 @@
         </div>
     </footer>
 
-    <script src="./script/index.js" type="module"></script>
-    <script src="./script/contact.js" type="module"></script>
 </body>
 </html>
