--- a/demoprojects/HotelSeite/index.html
+++ b/demoprojects/HotelSeite/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hotel Mustermann</title>
-    <link rel="stylesheet" href="./styles/index.css">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Hotel Mustermann</title>
+        <link rel="stylesheet" href="./styles/index.css">
+        <script src="./scripts/index.js" type="module" defer></script>
 </head>
 <body>
     <header class="header">
@@ -40,6 +41,5 @@
     <section>
 
     </section>
-    <script src="./scripts/index.js"></script>
 </body>
 </html>
