--- a/demoprojects/TheSun/sonne.html
+++ b/demoprojects/TheSun/sonne.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    <link rel="stylesheet" href="./styles/index.css">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Home</title>
+        <link rel="stylesheet" href="./styles/index.css">
+        <script src="./scripts/index.js" type="module" defer></script>
 </head>
 <body>
     <header class="header">
@@ -64,7 +65,6 @@
         <footer class="footer">
     
         </footer>
-    <script src="./scripts/index.js" type="module"></script>
     <svg>
         <filter id="turbulence" x="0" y="0" width="100%" height="100%">
             <feTurbulence id="sea-filter" numOctaves="3" seed="2" baseFrequency="0.02 0.05"></feTurbulence>
