--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sven´s Portfolio</title>
     <link rel="stylesheet" href="./styles/index.css">
+    <script src="./script/index.js" type="module" defer></script>
 </head>
 <body>
     <header class="header">
@@ -134,6 +135,5 @@
             <p>&#169 Copyright 2023 by Freelance Coding Sven Höhn</p>
         </div>
     </footer>
-    <script src="./script/index.js" type="module"></script>
 </body>
 </html>
